--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
     "@supabase/supabase-js": "^2.50.0",
+    "@tanstack/react-query": "^5.83.0",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
