feat: 랜딩페이지 구조 생성, 모노레포 분리

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/index.html"
-        }
-    ]
+  "projects": {
+    "checkmate-calendar-landing": {
+      "root": "apps/landing"
+    },
+    "checkmate-calendar-app": {
+      "root": "apps/calendar"
+    }
+  }
 }
