--- a/package.json
+++ b/package.json
@@ -1,52 +1,21 @@
 {
   "name": "checkmate-calendar",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "Checkmate Calendar - Monorepo",
+  "workspaces": [
+    "apps/*"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
-    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\""
+    "dev:landing": "npm run dev --workspace=apps/landing",
+    "dev:calendar": "npm run dev --workspace=apps/calendar",
+    "build:landing": "npm run build --workspace=apps/landing",
+    "build:calendar": "npm run build --workspace=apps/calendar",
+    "preview:landing": "npm run preview --workspace=apps/landing",
+    "preview:calendar": "npm run preview --workspace=apps/calendar"
   },
-  "dependencies": {
-    "@chakra-ui/react": "^3.22.0",
-    "@emotion/react": "^11.14.0",
-    "@fullcalendar/core": "^6.1.17",
-    "@fullcalendar/daygrid": "^6.1.17",
-    "@fullcalendar/interaction": "^6.1.17",
-    "@fullcalendar/list": "^6.1.17",
-    "@fullcalendar/react": "^6.1.17",
-    "@fullcalendar/timegrid": "^6.1.17",
-    "@supabase/supabase-js": "^2.50.0",
-    "@tanstack/react-query": "^5.83.0",
-    "axios": "^1.9.0",
-    "date-fns": "^4.1.0",
-    "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.2",
-    "sass": "^1.89.2",
-    "uuid": "^11.1.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@types/uuid": "^10.0.0",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.3",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "prettier": "^3.6.2",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
