fix: Vercel 빌드 에러 해결 - rollup optional dependencies 문제 수정

--- a/apps/calendar/vercel.json
+++ b/apps/calendar/vercel.json
@@ -2,6 +2,7 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
+  "installCommand": "cd ../.. && rm -rf node_modules package-lock.json && npm install --force",
   "rewrites": [
     {
       "source": "/(.*)",
