--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Trigger landing deploy
         if: steps.landing_changes.outputs.changed == 'true'
         run: |
-          curl -X POST "https://api.vercel.com/v1/integrations/deploy/prj_tJDcVWcwFO423izSOCkuYwnIah8m/L4rDDXLFEV"
+          curl -X POST "${{ secrets.VERCEL_DEPLOY_LANDING }}"
 
   deploy-calendar:
     runs-on: ubuntu-latest
@@ -62,4 +62,4 @@ jobs:
       - name: Trigger calendar deploy
         if: steps.calendar_changes.outputs.changed == 'true'
         run: |
-          curl -X POST "https://api.vercel.com/v1/integrations/deploy/prj_yzMHglFe4LmIKtazxACHgfphnJzs/tmtVy4XPGO"
+          curl -X POST "${{ secrets.VERCEL_DEPLOY_CALENDAR }}"
