fix: workflow vercel 토큰 통합

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,13 +36,13 @@ jobs:
           cd apps/landing
           if [ "${{ github.ref_name }}" = "main" ]; then
             npx vercel deploy --prebuilt \
-              --token=${{ secrets.VERCEL_TOKEN_LANDING }} \
+              --token=${{ secrets.VERCEL_TOKEN }} \
               --org ${{ secrets.VERCEL_ORG_ID }} \
               --project ${{ secrets.VERCEL_PROJECT_ID_LANDING }} \
               --prod
           else
             npx vercel deploy --prebuilt \
-              --token=${{ secrets.VERCEL_TOKEN_LANDING }} \
+              --token=${{ secrets.VERCEL_TOKEN }} \
               --org ${{ secrets.VERCEL_ORG_ID }} \
               --project ${{ secrets.VERCEL_PROJECT_ID_LANDING }}
           fi
@@ -76,13 +76,13 @@ jobs:
           cd apps/calendar
           if [ "${{ github.ref_name }}" = "main" ]; then
             npx vercel deploy --prebuilt \
-              --token=${{ secrets.VERCEL_TOKEN_CALENDAR }} \
+              --token=${{ secrets.VERCEL_TOKEN }} \
               --org ${{ secrets.VERCEL_ORG_ID }} \
               --project ${{ secrets.VERCEL_PROJECT_ID_CALENDAR }} \
               --prod
           else
             npx vercel deploy --prebuilt \
-              --token=${{ secrets.VERCEL_TOKEN_CALENDAR }} \
+              --token=${{ secrets.VERCEL_TOKEN }} \
               --org ${{ secrets.VERCEL_ORG_ID }} \
               --project ${{ secrets.VERCEL_PROJECT_ID_CALENDAR }}
           fi
