fix: vercel cli 옵션 수정
- 지원하지 않는 옵션 제거 후 환경변수로 세팅

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,17 +35,13 @@ jobs:
         run: |
           cd apps/landing
           if [ "${{ github.ref_name }}" = "main" ]; then
-            npx vercel deploy --prebuilt \
-              --token=${{ secrets.VERCEL_TOKEN }} \
-              --org ${{ secrets.VERCEL_ORG_ID }} \
-              --project ${{ secrets.VERCEL_PROJECT_ID_LANDING }} \
-              --prod
+            npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
           else
-            npx vercel deploy --prebuilt \
-              --token=${{ secrets.VERCEL_TOKEN }} \
-              --org ${{ secrets.VERCEL_ORG_ID }} \
-              --project ${{ secrets.VERCEL_PROJECT_ID_LANDING }}
+            npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
           fi
+        env:
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_LANDING }}
 
   deploy-calendar:
     runs-on: ubuntu-latest
@@ -75,14 +71,10 @@ jobs:
         run: |
           cd apps/calendar
           if [ "${{ github.ref_name }}" = "main" ]; then
-            npx vercel deploy --prebuilt \
-              --token=${{ secrets.VERCEL_TOKEN }} \
-              --org ${{ secrets.VERCEL_ORG_ID }} \
-              --project ${{ secrets.VERCEL_PROJECT_ID_CALENDAR }} \
-              --prod
+            npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
           else
-            npx vercel deploy --prebuilt \
-              --token=${{ secrets.VERCEL_TOKEN }} \
-              --org ${{ secrets.VERCEL_ORG_ID }} \
-              --project ${{ secrets.VERCEL_PROJECT_ID_CALENDAR }}
+            npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
           fi
+        env:
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_CALENDAR }}
