--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -32,8 +32,8 @@ jobs:
         run: |
           cd apps/landing
           npm ci
-          npx vercel pull --yes --token=${{ secrets.VERCEL_TOKEN }} \
-            --environment=${{ github.event.inputs.branch == 'main' && 'production' || 'preview' }}
+          mkdir -p .vercel
+          echo "{\"orgId\":\"${{ secrets.VERCEL_ORG_ID }}\",\"projectId\":\"${{ secrets.VERCEL_PROJECT_ID_LANDING }}\"}" > .vercel/project.json
           npx vercel build --token=${{ secrets.VERCEL_TOKEN }}
           if [ "${{ github.event.inputs.branch }}" = "main" ]; then
             npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
@@ -49,8 +49,8 @@ jobs:
         run: |
           cd apps/calendar
           npm ci
-          npx vercel pull --yes --token=${{ secrets.VERCEL_TOKEN }} \
-            --environment=${{ github.event.inputs.branch == 'main' && 'production' || 'preview' }}
+          mkdir -p .vercel
+          echo "{\"orgId\":\"${{ secrets.VERCEL_ORG_ID }}\",\"projectId\":\"${{ secrets.VERCEL_PROJECT_ID_CALENDAR }}\"}" > .vercel/project.json
           npx vercel build --token=${{ secrets.VERCEL_TOKEN }}
           if [ "${{ github.event.inputs.branch }}" = "main" ]; then
             npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
