--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -24,132 +24,118 @@ jobs:
         with:
           ref: ${{ github.event.inputs.branch }}
 
-      # -------- landing --------
-      - name: Context (landing)
-        if: ${{ github.event.inputs.app == 'landing' }}
+      - name: Context
         shell: bash
         run: |
-          echo "APP=landing"
+          echo "APP=${{ github.event.inputs.app }}"
           echo "BRANCH=${{ github.event.inputs.branch }}"
+          echo "PWD=$(pwd)"
+          ls -la
 
-      - name: Env / Versions (landing)
+      # -------- landing --------
+      - name: Prepare deps (landing)
         if: ${{ github.event.inputs.app == 'landing' }}
         shell: bash
-        working-directory: apps/landing
         run: |
+          echo "[landing] node/npm/vercel versions"
           node -v || true
           npm -v || true
           npx vercel --version || true
-          echo "PWD=$(pwd)"
-          echo "LS=$(ls -la)"
+          echo "[landing] npm ci in repo root if needed (adjust as your monorepo requires)"
+          npm ci || true
+          echo "[landing] optional: workspace/local install"
+          if [ -f apps/landing/package.json ]; then (cd apps/landing && npm ci || true); fi
 
-      - name: npm ci (landing)
+      - name: vercel pull (landing) @ repo root
         if: ${{ github.event.inputs.app == 'landing' }}
         shell: bash
-        working-directory: apps/landing
-        run: npm ci
-
-      - name: vercel pull (landing)
-        if: ${{ github.event.inputs.app == 'landing' }}
-        shell: bash
-        working-directory: apps/landing
+        working-directory: .
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_LANDING }}
         run: |
-          echo "vercel pull environment=$([ '${{ github.event.inputs.branch }}' = 'main' ] && echo production || echo preview)"
+          echo "[landing] vercel pull environment=$([ '${{ github.event.inputs.branch }}' = 'main' ] && echo production || echo preview)"
           npx vercel pull --yes \
             --environment=$([ '${{ github.event.inputs.branch }}' = 'main' ] && echo production || echo preview) \
             --token=${{ secrets.VERCEL_TOKEN }}
-          echo "Pulled files:"
+          echo "[landing] pulled files in .vercel:"
           ls -la .vercel || true
-          test -s .vercel/project.json && echo ".vercel/project.json exists (size > 0)" || { echo "project.json missing"; exit 1; }
+          test -s .vercel/project.json && echo ".vercel/project.json exists (>0 bytes)" || { echo "project.json missing"; exit 1; }
 
-      - name: vercel build (landing)
+      - name: vercel build (landing) @ repo root
         if: ${{ github.event.inputs.app == 'landing' }}
         shell: bash
-        working-directory: apps/landing
+        working-directory: .
         run: |
-          echo "Running vercel build..."
+          echo "[landing] vercel build start"
           npx vercel build --token=${{ secrets.VERCEL_TOKEN }}
-          echo "Build output:"
+          echo "[landing] build output exists?"
           ls -la .vercel/output || true
           du -sh .vercel/output || true
 
-      - name: vercel deploy (landing)
+      - name: vercel deploy (landing) @ repo root
         if: ${{ github.event.inputs.app == 'landing' }}
         shell: bash
-        working-directory: apps/landing
+        working-directory: .
         run: |
           if [ "${{ github.event.inputs.branch }}" = "main" ]; then
-            echo "Deploying as PRODUCTION..."
+            echo "[landing] deploy as PRODUCTION"
             npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
           else
-            echo "Deploying as PREVIEW..."
+            echo "[landing] deploy as PREVIEW"
             npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
           fi
 
       # -------- calendar --------
-      - name: Context (calendar)
+      - name: Prepare deps (calendar)
         if: ${{ github.event.inputs.app == 'calendar' }}
         shell: bash
         run: |
-          echo "APP=calendar"
-          echo "BRANCH=${{ github.event.inputs.branch }}"
-
-      - name: Env / Versions (calendar)
-        if: ${{ github.event.inputs.app == 'calendar' }}
-        shell: bash
-        working-directory: apps/calendar
-        run: |
+          echo "[calendar] node/npm/vercel versions"
           node -v || true
           npm -v || true
           npx vercel --version || true
-          echo "PWD=$(pwd)"
-          echo "LS=$(ls -la)"
+          echo "[calendar] npm ci in repo root if needed (adjust as your monorepo requires)"
+          npm ci || true
+          echo "[calendar] optional: workspace/local install"
+          if [ -f apps/calendar/package.json ]; then (cd apps/calendar && npm ci || true); fi
 
-      - name: npm ci (calendar)
+      - name: vercel pull (calendar) @ repo root
         if: ${{ github.event.inputs.app == 'calendar' }}
         shell: bash
-        working-directory: apps/calendar
-        run: npm ci
-
-      - name: vercel pull (calendar)
-        if: ${{ github.event.inputs.app == 'calendar' }}
-        shell: bash
-        working-directory: apps/calendar
+        working-directory: .
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_CALENDAR }}
         run: |
-          echo "vercel pull environment=$([ '${{ github.event.inputs.branch }}' = 'main' ] && echo production || echo preview)"
+          echo "[calendar] vercel pull environment=$([ '${{ github.event.inputs.branch }}' = 'main' ] && echo production || echo preview)"
           npx vercel pull --yes \
             --environment=$([ '${{ github.event.inputs.branch }}' = 'main' ] && echo production || echo preview) \
             --token=${{ secrets.VERCEL_TOKEN }}
-          echo "Pulled files:"
+          echo "[calendar] pulled files in .vercel:"
           ls -la .vercel || true
-          test -s .vercel/project.json && echo ".vercel/project.json exists (size > 0)" || { echo "project.json missing"; exit 1; }
+          test -s .vercel/project.json && echo ".vercel/project.json exists (>0 bytes)" || { echo "project.json missing"; exit 1; }
 
-      - name: vercel build (calendar)
+      - name: vercel build (calendar) @ repo root
         if: ${{ github.event.inputs.app == 'calendar' }}
         shell: bash
-        working-directory: apps/calendar
+        working-directory: .
         run: |
-          echo "Running vercel build..."
+          echo "[calendar] vercel build start"
           npx vercel build --token=${{ secrets.VERCEL_TOKEN }}
-          echo "Build output:"
+          echo "[calendar] build output exists?"
           ls -la .vercel/output || true
           du -sh .vercel/output || true
 
-      - name: vercel deploy (calendar)
+      - name: vercel deploy (calendar) @ repo root
         if: ${{ github.event.inputs.app == 'calendar' }}
         shell: bash
-        working-directory: apps/calendar
+        working-directory: .
         run: |
           if [ "${{ github.event.inputs.branch }}" = "main" ]; then
-            echo "Deploying as PRODUCTION..."
+            echo "[calendar] deploy as PRODUCTION"
             npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --prod
           else
-            echo "Deploying as PREVIEW..."
+            echo "[calendar] deploy as PREVIEW"
             npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
           fi
